--- a/Clients/Corvus.WSClient/pom.xml
+++ b/Clients/Corvus.WSClient/pom.xml
@@ -2,32 +2,32 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.clients</groupId>
-        <artifactId>piazza-clients-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.clients</groupId>
+        <artifactId>jentrata-clients-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-wsclient</artifactId>
+    <artifactId>jentrata-corvus-wsclient</artifactId>
 
     <name>Clients: Corvus WSClient</name>
-    <description>Piazza Clients Corvus WSClient</description>
+    <description>Jentrata Clients Corvus WSClient</description>
     
     <dependencies>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
+    		<groupId>org.jentrata.msh</groupId>
+    		<artifactId>jentrata-commons</artifactId>
     	</dependency>
     	
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.ext</groupId>
-    		<artifactId>piazza-commons-test</artifactId>
+    		<groupId>org.jentrata.msh.ext</groupId>
+    		<artifactId>jentrata-commons-test</artifactId>
     	</dependency>  
 
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.ext</groupId>
-    		<artifactId>piazza-commons-ext</artifactId>
+    		<groupId>org.jentrata.msh.ext</groupId>
+    		<artifactId>jentrata-commons-ext</artifactId>
     	</dependency>
     	
 		<dependency>
