--- a/Core/Corvus.Web/pom.xml
+++ b/Core/Corvus.Web/pom.xml
@@ -2,23 +2,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.core</groupId>
-        <artifactId>piazza-corvus-core-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+		<groupId>org.jentrata.msh.core</groupId>
+		<artifactId>jentrata-corvus-core-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-core-web</artifactId>
+    <artifactId>jentrata-corvus-core-web</artifactId>
     <packaging>war</packaging>
 
     <name>Core: Corvus Web</name>
-    <description>Piazza Corvus Core Web Framework</description>
+    <description>Jentrata Corvus Core Web Framework</description>
     
     <dependencies>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.core</groupId>
-    		<artifactId>piazza-corvus-core</artifactId>
+    		<groupId>org.jentrata.msh.core</groupId>
+    		<artifactId>jentrata-corvus-core</artifactId>
     		<exclusions>
     			<exclusion>
     				<groupId>jboss</groupId>
