--- a/Core/Corvus/pom.xml
+++ b/Core/Corvus/pom.xml
@@ -2,23 +2,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.core</groupId>
-        <artifactId>piazza-corvus-core-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+		<groupId>org.jentrata.msh.core</groupId>
+		<artifactId>jentrata-corvus-core-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-core</artifactId>
+    <artifactId>jentrata-corvus-core</artifactId>
 
     <name>Core: Corvus Core</name>
-    <description>Piazza Corvus Core</description>
+    <description>Jentrata Corvus Core</description>
     
     <dependencies>
     
-    	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
-    	</dependency>
+		<dependency>
+			<groupId>org.jentrata.msh</groupId>
+			<artifactId>jentrata-commons</artifactId>
+		</dependency>
     
         <dependency>
             <groupId>javax.servlet</groupId>
