--- a/Ext/CommonsExt/pom.xml
+++ b/Ext/CommonsExt/pom.xml
@@ -2,24 +2,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.ext</groupId>
-        <artifactId>piazza-ext-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+		<groupId>org.jentrata.msh.ext</groupId>
+    	<artifactId>jentrata-ext-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-commons-ext</artifactId>
+    <artifactId>jentrata-commons-ext</artifactId>
     <packaging>pom</packaging>
 
     <name>Ext: Commons Extensions</name>
-    <description>Piazza Ext Common Extensions Library</description>
+    <description>Jentrata Ext Common Extensions Library</description>
     
     <dependencies>
     
-    	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
-    	</dependency>
+		<dependency>
+			<groupId>org.jentrata.msh</groupId>
+			<artifactId>jentrata-commons</artifactId>
+		</dependency>
     
     </dependencies>
     
