--- a/Ext/CommonsTest/pom.xml
+++ b/Ext/CommonsTest/pom.xml
@@ -2,16 +2,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.ext</groupId>
-        <artifactId>piazza-ext-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+		<groupId>org.jentrata.msh.ext</groupId>
+    	<artifactId>jentrata-ext-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-commons-test</artifactId>
+    <artifactId>jentrata-commons-test</artifactId>
 
     <name>Ext: Commons Test</name>
-    <description>Piazza Ext Common Test Library</description>
+    <description>Jentrata Ext Common Test Library</description>
     
     <dependencies>
     
@@ -20,19 +20,19 @@
     		<artifactId>junit</artifactId>
     	</dependency>    
     
+		<dependency>
+			<groupId>org.jentrata.msh</groupId>
+			<artifactId>jentrata-commons</artifactId>
+		</dependency>
+    	
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
+    		<groupId>org.jentrata.msh.core</groupId>
+    		<artifactId>jentrata-corvus-core</artifactId>
     	</dependency>
     	
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.core</groupId>
-    		<artifactId>piazza-corvus-core</artifactId>
-    	</dependency>
-    	
-    	<dependency>
-    		<groupId>hk.hku.cecid.piazza.plugins</groupId>
-    		<artifactId>piazza-corvus-as2</artifactId>
+    		<groupId>org.jentrata.msh.plugins</groupId>
+    		<artifactId>jentrata-corvus-as2</artifactId>
     	</dependency>
     	
 		<dependency>
