--- a/Ext/ebxml-pkg/pom.xml
+++ b/Ext/ebxml-pkg/pom.xml
@@ -2,17 +2,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.ext</groupId>
-        <artifactId>piazza-ext-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+		<groupId>org.jentrata.msh.ext</groupId>
+    	<artifactId>jentrata-ext-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>ebxml-pkg</artifactId>
+    <artifactId>jentrata-ebxml-pkg</artifactId>
 
     <name>Ext: EbXML</name>
-    <description>Piazza Ext EbXML Library</description>
-    
+    <description>Jentrata Ext EbXML Library</description>
     
     <dependencies>
     
