--- a/Plugins/Corvus.Main/pom.xml
+++ b/Plugins/Corvus.Main/pom.xml
@@ -2,22 +2,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.plugins</groupId>
-        <artifactId>piazza-plugins-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-main</artifactId>
+    <artifactId>jentrata-corvus-main</artifactId>
 
     <name>Plugins: Corvus Main</name>
-    <description>Piazza Plugin Corvus Main</description>
+    <description>Jentrata Plugin Corvus Main</description>
     
     <dependencies>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
+    		<groupId>org.jentrata.msh</groupId>
+    		<artifactId>jentrata-commons</artifactId>
     	</dependency>
     
         <dependency>
