--- a/Plugins/CorvusAS2.Admin/pom.xml
+++ b/Plugins/CorvusAS2.Admin/pom.xml
@@ -2,32 +2,32 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.plugins</groupId>
-        <artifactId>piazza-plugins-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-as2-admin</artifactId>
+    <artifactId>jentrata-corvus-as2-admin</artifactId>
 
     <name>Plugins: Corvus AS2 Admin</name>
-    <description>Piazza Plugin Corvus AS2 Admin</description>
+    <description>Jentrata Plugin Corvus AS2 Admin</description>
     
     <dependencies>
     
 		<dependency>
-			<groupId>hk.hku.cecid.piazza</groupId>
-			<artifactId>piazza-commons</artifactId>
+			<groupId>org.jentrata.msh</groupId>
+			<artifactId>jentrata-commons</artifactId>
 		</dependency>
     
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.plugins</groupId>
-			<artifactId>piazza-corvus-as2</artifactId>
+			<groupId>org.jentrata.msh.plugins</groupId>
+			<artifactId>jentrata-corvus-as2</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.plugins</groupId>
-			<artifactId>piazza-corvus-admin</artifactId>
+			<groupId>org.jentrata.msh.plugins</groupId>
+			<artifactId>jentrata-corvus-admin</artifactId>
 		</dependency>
 		
 		<dependency>
