--- a/Plugins/CorvusAS2Plus.Admin/pom.xml
+++ b/Plugins/CorvusAS2Plus.Admin/pom.xml
@@ -2,40 +2,40 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.plugins</groupId>
-        <artifactId>piazza-plugins-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-as2-plus-admin</artifactId>
+    <artifactId>jentrata-corvus-as2-plus-admin</artifactId>
 
     <name>Plugins: Corvus AS2Plus Admin</name>
-    <description>Piazza Plugin Corvus AS2Plus Admin</description>
+    <description>Jentrata Plugin Corvus AS2Plus Admin</description>
     
     <dependencies>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.ext</groupId>
-    		<artifactId>piazza-commons-test</artifactId>
+    		<groupId>org.jentrata.msh.ext</groupId>
+    		<artifactId>jentrata-commons-test</artifactId>
     		<scope>test</scope>
     		<exclusions>
     			<exclusion>
-    				<groupId>hk.hku.cecid.piazza.plugins</groupId>
-    				<artifactId>piazza-corvus-as2</artifactId>
+    				<groupId>org.jentrata.msh.plugins</groupId>
+    				<artifactId>jentrata-corvus-as2</artifactId>
     			</exclusion>
     		</exclusions>
     	</dependency>
 
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.plugins</groupId>
-			<artifactId>piazza-corvus-admin</artifactId>
+			<groupId>org.jentrata.msh.plugins</groupId>
+			<artifactId>jentrata-corvus-admin</artifactId>
 		</dependency>
 
     
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.plugins</groupId>
-			<artifactId>piazza-corvus-as2-plus</artifactId>
+			<groupId>org.jentrata.msh.plugins</groupId>
+			<artifactId>jentrata-corvus-as2-plus</artifactId>
 		</dependency>
 		
 		<dependency>
