--- a/Plugins/CorvusAS2Plus/pom.xml
+++ b/Plugins/CorvusAS2Plus/pom.xml
@@ -2,28 +2,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.plugins</groupId>
-        <artifactId>piazza-plugins-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-as2-plus</artifactId>
+    <artifactId>jentrata-corvus-as2-plus</artifactId>
 
     <name>Plugins: Corvus AS2 Plus</name>
-    <description>Piazza Plugin Corvus AS2 Plus</description>
+    <description>Jentrata Plugin Corvus AS2 Plus</description>
     
     <dependencies>
 
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.ext</groupId>
-    		<artifactId>piazza-commons-test</artifactId>
+    		<groupId>org.jentrata.msh.ext</groupId>
+    		<artifactId>jentrata-commons-test</artifactId>
     		<scope>test</scope>
     	</dependency>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
+    		<groupId>org.jentrata.msh</groupId>
+    		<artifactId>jentrata-commons</artifactId>
     	</dependency>
     
         <dependency>
