--- a/Plugins/CorvusEbMS/pom.xml
+++ b/Plugins/CorvusEbMS/pom.xml
@@ -2,17 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>hk.hku.cecid.piazza.plugins</groupId>
-		<artifactId>piazza-plugins-parent</artifactId>
-		<version>2.0.20100331-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-	<artifactId>piazza-corvus-ebms</artifactId>
+	<artifactId>jentrata-corvus-ebms</artifactId>
 
 	<name>Plugins: Corvus EbMS</name>
-	<description>Piazza Plugin Corvus EbMS</description>
+	<description>Jentrata Plugin Corvus EbMS</description>
 	<build>
 		<plugins>
 			<plugin>
@@ -28,8 +28,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.ext</groupId>
-			<artifactId>piazza-commons-test</artifactId>
+			<groupId>org.jentrata.msh.ext</groupId>
+			<artifactId>jentrata-commons-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
@@ -46,8 +46,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>hk.hku.cecid.piazza</groupId>
-			<artifactId>piazza-commons</artifactId>
+			<groupId>org.jentrata.msh</groupId>
+			<artifactId>jentrata-commons</artifactId>
 		</dependency>
 
 		<dependency>
@@ -56,13 +56,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.ext</groupId>
-			<artifactId>ebxml-pkg</artifactId>
+			<groupId>org.jentrata.msh.ext</groupId>
+			<artifactId>jentrata-ebxml-pkg</artifactId>
 		</dependency>
 		
 		<dependency>
-			<groupId>hk.hku.cecid.piazza.plugins</groupId>
-			<artifactId>piazza-corvus-jms</artifactId>
+			<groupId>org.jentrata.msh.plugins</groupId>
+			<artifactId>jentrata-corvus-jms</artifactId>
 		</dependency>
 
 		<dependency>
