--- a/Plugins/CorvusJMS/pom.xml
+++ b/Plugins/CorvusJMS/pom.xml
@@ -2,16 +2,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza.plugins</groupId>
-        <artifactId>piazza-plugins-parent</artifactId>
-        <version>2.0.20100331-SNAPSHOT</version>
+        <groupId>org.jentrata.msh.plugins</groupId>
+        <artifactId>jentrata-plugins-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus-jms</artifactId>
+    <artifactId>jentrata-corvus-jms</artifactId>
 
     <name>Plugins: Corvus JMS</name>
-    <description>Piazza Plugin Corvus JMS</description>
+    <description>Jentrata Plugin Corvus JMS</description>
     
     <dependencies>
     
@@ -28,20 +28,20 @@
 		</dependency>    
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.ext</groupId>
-    		<artifactId>piazza-commons-test</artifactId>
+    		<groupId>org.jentrata.msh.ext</groupId>
+    		<artifactId>jentrata-commons-test</artifactId>
     		<scope>test</scope>
     	</dependency>
     	
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza.core</groupId>
-    		<artifactId>piazza-corvus-core</artifactId>
+    		<groupId>org.jentrata.msh.core</groupId>
+    		<artifactId>jentrata-corvus-core</artifactId>
     		<scope>provided</scope>
     	</dependency>
     	
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
-    		<artifactId>piazza-commons</artifactId>
+    		<groupId>org.jentrata.msh</groupId>
+    		<artifactId>jentrata-commons</artifactId>
     		<scope>provided</scope>
     	</dependency>
     	
