tidy up for version numbering to be consistent with the maven project version

--- a/Core/Corvus.Web/pom.xml
+++ b/Core/Corvus.Web/pom.xml
@@ -100,6 +100,12 @@
     
     <build>
     	<finalName>corvus</finalName>
+    	<resources>
+			<resource>
+    			<directory>src/main/resources</directory>
+    			<filtering>true</filtering>
+    		</resource>
+    	</resources>
     </build>
     
 </project>
