switch from BASIC auth to FORM based auth and added a simple login page also added header links to admin template

--- a/Core/Corvus.Web/src/main/webapp/WEB-INF/web.xml
+++ b/Core/Corvus.Web/src/main/webapp/WEB-INF/web.xml
@@ -115,8 +115,12 @@
   </security-constraint>
 
   <login-config>
-    <auth-method>BASIC</auth-method>
-    <realm-name>Corvus Restricted Area</realm-name>
+    <auth-method>FORM</auth-method>
+    <realm-name>Jentrata MSH Admin</realm-name>
+   <form-login-config>
+      <form-login-page>/WEB-INF/jsp/login.jsp</form-login-page>
+      <form-error-page>/WEB-INF/jsp/login.jsp?failed=true</form-error-page>
+   </form-login-config>    
   </login-config>
 
   <security-role> 
