fix for #1 - added dependencies and updated tomcat assembly

--- a/Plugins/CorvusAS2.Admin/src/main/resources/hk.hku.cecid.edi.as2.admin/plugin.xml
+++ b/Plugins/CorvusAS2.Admin/src/main/resources/hk.hku.cecid.edi.as2.admin/plugin.xml
@@ -5,7 +5,7 @@
    provider-name="hk.hku.cecid">
 
 	<runtime>
-		<library name="commons-fileupload-1.0.jar"/>
+		<library name="lib/"/>
 		<library name="corvus-as2-admin.jar"/>
 		<library name="conf/"/>
 		<library name="graphics/"/>
