Added instructions for using MySQL database and added dependencies to pom files

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
 				<version>9.0-801.jdbc4</version>
 			</dependency>
 
+                        <dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.6</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>activemq-core</artifactId>
