--- a/Core/Corvus.Web/pom.xml
+++ b/Core/Corvus.Web/pom.xml
@@ -95,6 +95,11 @@
 		    <groupId>postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
     
     </dependencies>
     
