--- a/Plugins/CorvusAS2/src/main/resources/hk.hku.cecid.edi.as2/plugin.xml
+++ b/Plugins/CorvusAS2/src/main/resources/hk.hku.cecid.edi.as2/plugin.xml
@@ -3,6 +3,7 @@
    id="hk.hku.cecid.edi.as2"
    name="Corvus AS2 Plugin"
    version="@version@"
+   buildID="${buildNumber}"
    provider-name="hk.hku.cecid"
    class="hk.hku.cecid.edi.as2.AS2Processor"
 >
