--- a/Plugins/Corvus.Main/src/main/resources/hk.hku.cecid.piazza.corvus.core.main/plugin.xml
+++ b/Plugins/Corvus.Main/src/main/resources/hk.hku.cecid.piazza.corvus.core.main/plugin.xml
@@ -3,6 +3,7 @@
    id="hk.hku.cecid.piazza.corvus.core.main"
    name="Corvus Main System Plugin"
    version="@version@"
+   buildID="${buildNumber}"
    provider-name="hk.hku.cecid"
 >
 
