--- a/Clients/Corvus.WSClient/pom.xml
+++ b/Clients/Corvus.WSClient/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jentrata.msh.clients</groupId>
         <artifactId>jentrata-clients-parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.x-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
