--- a/Plugins/CorvusEbMS/pom.xml
+++ b/Plugins/CorvusEbMS/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jentrata.msh.plugins</groupId>
         <artifactId>jentrata-plugins-parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.x-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
