--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.jentrata.msh</groupId>
 	<artifactId>jentrata-parent</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.x-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Jentrata MSH: Parent</name>
