custom integration using spring and camel for sending ebms message
commit be4081508059bc0b0b8d548a1a1d615afae8a5bd
Author: Aaron Walker <a.walker@base2services.com>
Date:   Mon Jul 11 22:29:21 2016 +1000

    updatea activemq and clean up dependencies

commit f69410d903bf232abbc4416dc40f2b4943bd5fb7
Author: Aaron Walker <a.walker@base2services.com>
Date:   Mon Jul 11 18:18:30 2016 +1000

    supports custom integration using spring and camel for sending ebms message

--- a/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
+++ b/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
@@ -60,6 +60,15 @@
 	  <parameter name="class" value="hk.hku.cecid.ebms.spa.service.EbmsPermitRedownloadService" />
 	  <parameter name="context" value="/ebms/permitdl" />
 	</extension>
+
+    <extension point="org.jentrata.integration.sender" name="Ebms Message Handler">
+        <parameter name="class" value="hk.hku.cecid.ebms.spa.handler.jms.EbmsMessageHandler" />
+        <parameter name="id" value="ebms" />
+    </extension>
+
+    <extension point="org.jentrata.integration.camel" name="Camel Ebms Integration">
+      <parameter name="deployLocation" value="file:${corvus.home}/deploy/*-ebms.xml" />
+	</extension>
 	
 	<!-- default EbXML Header parameters they can be overriden by setting them as JMS message properties
 	You can override the default ebxml MessageId by setting a JMS message property ebxmlMessageId
