creates an ebms event listener which publishes events to camel using in in vm transport to allow subscribing from the jentrata.integration plugin

--- a/Plugins/CorvusEbMS/pom.xml
+++ b/Plugins/CorvusEbMS/pom.xml
@@ -41,6 +41,7 @@
 		<dependency>
 			<groupId>javax.jms</groupId>
 			<artifactId>jms</artifactId>
+            <scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -54,9 +55,16 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-all</artifactId>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
