--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>artemis-jms-client</artifactId>
+				<version>1.4.0</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>javax.jms</groupId>
 				<artifactId>jms</artifactId>
 				<version>1.1</version>
