--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,10 @@
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>artemis-jms-client</artifactId>
-				<version>1.4.0</version>
+				<!-- 1.4.0 does not work with Artemis 1.1.0 server in WildFly 10.1 -->
+				<!-- java.lang.ClassCastException: org.apache.activemq.artemis.core.protocol.core.impl.wireformat.SessionBindingQueryResponseMessage_V2 cannot be cast to org.apache.activemq.artemis.core.protocol.core.impl.wireformat.SessionBindingQueryResponseMessage_V3 -->
+				<!-- 1.3.0 may have the same issue -->
+				<version>1.2.0</version>
 			</dependency>
 			
 			<dependency>
