--- a/Core/Corvus.Web/pom.xml
+++ b/Core/Corvus.Web/pom.xml
@@ -92,7 +92,7 @@
 		</dependency>		
 		
 		<dependency>
-		    <groupId>postgresql</groupId>
+		    <groupId>org.postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		</dependency>
 
