--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -51,6 +51,11 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcmail-jdk15on</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-aws</artifactId>
+		</dependency>
     
     </dependencies>
     
